--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -4,8 +4,13 @@
   </head>
   <body>
     <h1>Your To-Do list</h1>
-    <input id="id_new_item" placeholder="Enter a to-do item"/>
+    <form method="POST">
+      {% csrf_token %}
+      <label id="new_item_label" for="new_item_input">Enter a to-do item</label>
+      <input name="item_text" id="new_item_input" />
+    </form>
     <table id="id_list_table">
+      <tr><td>1: {{ new_item_text }}</td></tr>
     </table>
   </body>
 </html>
