--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -3,11 +3,16 @@
   <title>To-Do lists</title>
   </head>
   <body>
-    <h1>Start a new To-Do list</h1>
+    <h1>Your To-Do list</h1>
     <form method="POST" action="/">
       {% csrf_token %}
       <label id="new_item_label" for="new_item_input">Enter a to-do item</label>
       <input name="item_text" id="new_item_input" />
     </form>
+    <table id="id_list_table">
+      {% for item in items %}
+      <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+      {% endfor %}
+    </table>
   </body>
 </html>
