--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Start a new To-Do list</h1>
-    <form method="POST" action="/">
+    <form method="POST" action="/lists/new">
       {% csrf_token %}
       <label id="new_item_label" for="new_item_input">Enter a to-do item</label>
       <input name="item_text" id="new_item_input" />
