--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -4,13 +4,13 @@
   </head>
   <body>
     <h1>Your To-Do list</h1>
-    <form method="POST" action="/lists/new">
+    <form method="POST" action="/lists/{{ list.id }}/add_item">
       {% csrf_token %}
       <label id="new_item_label" for="new_item_input">Enter a to-do item</label>
       <input name="item_text" id="new_item_input" />
     </form>
     <table id="id_list_table">
-      {% for item in items %}
+      {% for item in list.item_set.all %}
       <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
       {% endfor %}
     </table>
